--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 						<nav>
 							<ul>
 								<li><a href="https://nas.mmgzs.ml" class="fa fa-users"><span>DSM</span></a></li>
-								<li><a href="https://dy.mmgzs.ml" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
-								<li><a href="https://www.mmgzs.ml/photo" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
+								<li><a href="https://j.mmgzs.ml" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
+								<li><a href="http://zp.mmgzs.ml" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
 								<li><a href="https://pt.mmgzs.ml" target="_blank" class="fa fa-download"><span>pt</span></a></li>
-								<li><a href="https://esxi.mmgzs.ml" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
+								<li><a href="https://pve.mmgzs.ml" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; <a href="https://www.mmgzs.ml/wordpress" target="_blank"><em><strong> Welcome to Hello world</strong></em></a></span>
+						<span class="copyright">&copy; <a href="https://blog.mmgzs.ml" target="_blank"><em><strong> Welcome to Hello world</strong></em></a></span>
 					</footer>
 				
 			</div>
