--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; <a href="http://zmml.ml/" target="_blank"><em><strong> Welcome to Hello world</strong></em></a></span>
+						<span class="copyright">&copy; <a href="http://zmml.ml" target="_blank"><em><strong> Welcome to Hello world</strong></em></a></span>
 					</footer>
 				
 			</div>
