--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<ul>
 								<li><a href="https://nas.mmgzs.ml" class="fa fa-users"><span>DSM</span></a></li>
 								<li><a href="https://em.mmgzs.ml" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
-								<li><a href="http://zp.mmgzs.ml" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
+								<li><a href="http://nas.mmgzs.ml/photo" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
 								<li><a href="https://mmgzs.cf" target="_blank" class="fa fa-download"><span>pt</span></a></li>
 								<li><a href="https://pve.mmgzs.ml" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
 							</ul>
