--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 						<p>记忆里的旧时光</p>
 						<nav>
 							<ul>
-								<li><a href="https://nas.mmgzs.ml" class="fa fa-users"><span>DSM</span></a></li>
-								<li><a href="https://em.mmgzs.ml" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
-								<li><a href="http://zp.mmgzs.ml" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
-								<li><a href="https://bt.mmgzs.ml" target="_blank" class="fa fa-download"><span>pt</span></a></li>
-								<li><a href="https://pve.mmgzs.ml" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
+								<li><a href="https://nas.mmga.ga" class="fa fa-users"><span>DSM</span></a></li>
+								<li><a href="https://em.mmga.ga" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
+								<li><a href="http://zp.mmga.ga" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
+								<li><a href="https://bt.mmga.ga" target="_blank" class="fa fa-download"><span>pt</span></a></li>
+								<li><a href="https://pve.mmga.ga" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
 							</ul>
 						</nav>
 					</header>
