--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 						<p>记忆里的旧时光</p>
 						<nav>
 							<ul>
-								<li><a href="https://nas.mmga.ga" class="fa fa-users"><span>DSM</span></a></li>
-								<li><a href="https://em.mmga.ga" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
-								<li><a href="http://zp.mmga.ga" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
-								<li><a href="https://bt.mmga.ga" target="_blank" class="fa fa-download"><span>pt</span></a></li>
-								<li><a href="https://pve.mmga.ga" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
+								<li><a href="https://dsm.zmml.ml" class="fa fa-users"><span>DSM</span></a></li>
+								<li><a href="https://em.zmml.ml" target="_blank" class="fa fa-video-camera"><span>video</span></a></li>
+								<li><a href="http://zp.zmml.ml" target="_blank" class="fa fa-picture-o"><span>photo</span></a></li>
+								<li><a href="https://bt.zmml.ml" target="_blank" class="fa fa-download"><span>pt</span></a></li>
+								<li><a href="https://pve.zmml.ml" target="_blank" class="fa fa-windows"><span>esxi</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; <a href="http://zmml.ml" target="_blank"><em><strong> Welcome to Hello world</strong></em></a></span>
+						<span class="copyright">&copy; <a href="http://blog.zmml.ml" target="_blank"><em><strong> Welcome to Hello world</strong></em></a></span>
 					</footer>
 				
 			</div>
